[GTK][WPE] Do not use Chrome UA in YouTube https://bugs.webkit.org/show_bug.cgi?id=289194

Reviewed by Philippe Normand and Michael Catanzaro.

This patch removes the UA quirk for YouTube. As of writing, this seems
to be enough to make YouTube servers no longer block video content from
WebKitGTK.

Previously WebKitGTK was using a Chrome user-agent string to workaround
this bug: https://bugs.webkit.org/show_bug.cgi?id=253877 [GLib] No
render update when seeking outside of network buffer in fullscreen

However, the fullscreen bug seems no longer present in current YouTube
and WebKit, so there is no longer a need for the UA quirk: some sporadic
seek bugs remain, but they seem unrelated to full-screen.

* Source/WebCore/platform/glib/UserAgentQuirks.cpp:
(WebCore::urlRequiresChromeBrowser):
* Tools/TestWebKitAPI/Tests/WebCore/UserAgentQuirks.cpp:
(TestWebKitAPI::TEST(UserAgentTest, Quirks)):

Canonical link: https://commits.webkit.org/291817@main