Source/WebCore/platform/glib/UserAgentQuirks.cpp
@@ -66,10 +66,6 @@ static bool urlRequiresChromeBrowser(const String& domain, const String& baseDom
     if (baseDomain == "soundcloud.com"_s)
         return true;
 
-    // Seeking in fullscreen Youtube is broken.
-    if (baseDomain == "youtube.com"_s)
-        return true;
-
     // https://webcompat.com/issues/123672
     if (domain == "www.apple.com"_s)
         return true;
